# repoForFun

./: .gitignore  README.md
Assignment/: Abstract.java  Kontact.java
Assignment/java/: module-info.java
Assignment/src/main/java/: Manager.java  Student.java  学生信息.txt
Kontact/: CMakeLists.txt  CMakeLists.txt.user.9e92323  icon.qrc  mainwindow.cpp  mainwindow.ui
Kontact/core/: core copy.hpp  core.hpp
Kontact/widgets/: about.cpp  additem.cpp  additem.h  additem.ui  creatnewcontact.h  finditem.ui  modifyitem.cpp  modifyitem.ui  removeitem.cpp  removeitem.h  statistics.cpp
Test questions/: quiz.py  quizLib.xls
archive/Assignment/: FileIO.java  Inherit.java  Interface.java  Zhixue.java  string.java
archive/Assignment/untitled1/: pom.xml
archive/EZ-Interpreter/: AUTHORS  CMakeLists.txt  README.md  a.ez
archive/EZ-Interpreter/src/: CMakeLists.txt  main.cc
archive/EZ-Interpreter/src/ast/: AST.h  AST.hpp  memory.hpp
archive/EZ-Interpreter/src/parse/: parse.yy  scan.ll
archive/EZ-Interpreter/来源/AST/: symbolTable.hpp
archive/Kontact/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
archive/Kontact/core/: core copy.hpp
archive/Kontact/widgets/: about.h  about.ui  additem.cpp  creatnewcontact.cpp  creatnewcontact.ui  finditem.cpp  finditem.h  modifyitem.h  removeitem.ui  statistics.h  statistics.ui
archive/cg/: Material.java  Sphere.java  Tuple.java
archive/design/backend/: config.json  package-lock.json  package.json  tsconfig.json
archive/design/backend/sql/: init.sql
archive/design/backend/src/: database.ts  (+2 more)
archive/design/frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
archive/javaweb-playground/: package-lock.json  package.json  pom.xml
archive/twi-front/: .gitignore  package.json  vite.config.ts
archive/twi-front/src/: App.vue  main.ts  style.css
archive/twi/src/: database.sql
archive/wx/lib/: main.dart
archive/wx/linux/: CMakeLists.txt
archive/wx/test/: database_test.dart
archive/wx/web/: index.html  manifest.json
archive/wx/windows/: CMakeLists.txt
archive/任务/: Abstract.java
cg/: Vec3.java  tinyraytracer.java
rez-updater/: Cargo.toml  build.rs  config.json
rez-updater/src/: config.rs  main.rs
rez-updater/src/archive/: mod.rs
rez-updater/src/client/: fetch.rs  http_client.rs  mod.rs
rez-updater/src/config/: mod.rs
rez-updater/src/crypto/: mod.rs
rez-updater/src/fs/: mod.rs
rez-updater/src/ui/: mod.rs  ui.slint
rustplayground/: Cargo.toml
rustplayground/src/: echo.rs  lib.rs
twi/: .gitignore  config.json  nodemon.json  package.json
twi-front/: .gitignore  README.md  index.html  package.json  vite.config.ts
twi-front/src/: App.vue  main.ts  route.ts  util.ts
twi-front/src/components/: MainPage.vue  NewTweet.vue
twi-front/src/login/: App.vue  index.html  main.ts
twi-front/src/store/: globalStore.ts
twi/src/: database.sql  main.ts
updater-server/: app.js  config.json  init.js  misc.js  package.json
updater-server/routes/: check.js
(+83 files in other folders)
